fix: scrollbar style

--- a/packages/react/src/components/SheetOverlay/ScrollBar/index.css
+++ b/packages/react/src/components/SheetOverlay/ScrollBar/index.css
@@ -23,6 +23,8 @@
 
 .luckysheet-scrollbar-ltr::-webkit-scrollbar {
   background-color: transparent;
+  width: 8px;
+  height: 8px;
 }
 
 .luckysheet-scrollbar-ltr::-webkit-scrollbar-track {
@@ -32,7 +34,6 @@
 .luckysheet-scrollbar-ltr::-webkit-scrollbar-thumb {
   background-color: #babac0;
   border-radius: 16px;
-  border: 4px solid #fff;
 }
 
 .luckysheet-scrollbar-ltr::-webkit-scrollbar-button {
